#381 Show/hide unmounted device fast access